# miter

./: .clangd  .gitignore  CMakeLists.txt  NOTICE  README.md  mded.desktop  miter.desktop.in  spec.md
src/: main.cpp  mainwindow.cpp  mainwindow.h
src/config/: Settings.cpp  Settings.h  Theme.cpp  Theme.h
src/editor/: EditorWidget.cpp  EditorWidget.h  LineNumberArea.cpp  LineNumberArea.h  MdEditor.cpp  MdEditor.h  SearchBar.cpp  SearchBar.h  SessionManager.cpp  SessionManager.h  TabManager.cpp  TabManager.h
src/highlight/: MdHighlighter.cpp  MdHighlighter.h
src/parser/: BlockParser.cpp  BlockParser.h  ContextStack.cpp  ContextStack.h  InlineParser.cpp  InlineParser.h  LatexParser.cpp  LatexParser.h  TokenTypes.h
src/util/: CjkUtil.cpp  CjkUtil.h  TomlParser.cpp  TomlParser.h
tests/: CMakeLists.txt  test_block_parser.cpp  test_context_stack.cpp  test_highlighter.cpp  test_inline_parser.cpp  test_latex_parser.cpp  test_md_editor.cpp  test_tab_manager.cpp
themes/: dark.toml  light.toml  white.toml
